# mac-tahmin1

./: .env  data_handler.py  live_matches.py  main.py  match_commentator.py  ml_predictor.py  models.py  notification_handler.py  performance_analyzer.py  player_analyzer.py  pyproject.toml  replit_zip_error_log.txt  simulation_engine.py  strategy_advisor.py  team_analyzer.py  test_prediction.py  utils.py
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.cache/replit/transfers/: .32fk6nawrvonn3220058619~  .9hilxlub07od2466405226~
.local/state/replit/agent/: repl_state.json
.streamlit/: secrets.toml
.upm/: store.json
attached_assets/: Pasted-Form-Trendi-Form-kar-la-t-rmas-yap-l-rken-hata-olu-tu-Invalid-value-of-type-builtins-dict-rece-1735425343713.txt  Pasted-Form-Trendi-Form-kar-la-t-rmas-yap-l-rken-hata-olu-tu-Invalid-value-of-type-builtins-dict-rece-1735448231599.txt  TTTTTAHMINATOR.py  import React, { useState, useEffect } fr.js
pages/: live_matches.py  notification_settings.py
