[project]
name = "repl-nix-footballpredictorpro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.9",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "streamlit>=1.41.1",
    "twilio>=9.4.1",
    "xgboost>=2.1.3",
]
