[tool.poetry]
name = "mac-tahmin"
version = "0.1.0"
description = "Futbol maç tahmin sistemi"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.24.3"
pandas = "^2.0.3"
streamlit = "^1.25.0"
xgboost = "^1.7.6"
scikit-learn = "^1.3.0"
tensorflow = "^2.13.0"
requests = "^2.31.0"
plotly = "^5.15.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
